--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -1,10 +1,14 @@
 nelmio_cors:
-    defaults:
-        origin_regex: true
-        allow_origin: ['%env(CORS_ALLOW_ORIGIN)%']
-        allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE']
-        allow_headers: ['Content-Type', 'Authorization']
-        expose_headers: ['Link']
-        max_age: 3600
-    paths:
-        '^/': null
+  defaults:
+    origin_regex: true
+    allow_origin: ["http://127.0.0.1"]
+    allow_methods: ["GET", "OPTIONS", "POST", "PUT", "PATCH", "DELETE"]
+    allow_headers: ["Content-Type", "Authorization"]
+    expose_headers: ["Link"]
+    max_age: 3600
+  paths:
+    "^/api/":
+      allow_origin: ["^http://localhost:[0-9]+$", "^http://127.0.0.1:[0-9]+$"]
+      allow_headers: ["Content-Type", "Authorization"]
+      allow_methods: ["POST", "PUT", "GET", "DELETE", "OPTIONS"]
+      max_age: 3600
