--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -8,7 +8,7 @@ nelmio_cors:
     max_age: 3600
   paths:
     "^/api/":
-      allow_origin: ["^http://localhost:[0-9]+$", "^http://127.0.0.1:[0-9]+$"]
+      allow_origin: ["^http://localhost:[0-9]+$", "^http://127.0.0.1:[0-9]+$", "^http://127.0.0.1:5173"]
       allow_headers: ["Content-Type", "Authorization"]
-      allow_methods: ["POST", "PUT", "GET", "DELETE", "OPTIONS"]
+      allow_methods: ["POST", "PUT", "GET", "DELETE", "OPTIONS", "PATCH"]
       max_age: 3600
