--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,9 +17,9 @@ jobs:
         PORT: ${{ secrets.PORT }}
         KEY: ${{ secrets.SSHKEY }}
         script: |
-          cd /home/mmi21g01/public_html/movie-app-symfony-s5/ 
+          cd /home/mmi21g01/public_html/
           git clone git@github.com:Taiyousan/symfony-s5.git
-          cd movieAppSymfony
+          cd symfony-s5
           git pull
           composer install
           php bin/console c:c
