--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         PORT: ${{ secrets.PORT }}
         KEY: ${{ secrets.SSHKEY }}
         script: |
-          cd /home/mmi21g01/public_html/
+          cd /var/www/movie-app
           git clone git@github.com:Taiyousan/symfony-s5.git
           cd symfony-s5
           git pull
