--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -44,7 +44,8 @@ security:
   access_control:
     - { path: ^/api/login, roles: PUBLIC_ACCESS }
     - { path: ^/api/docs, roles: PUBLIC_ACCESS }
-    - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
+    - { path: ^/api/media_object, roles: PUBLIC_ACCESS }
+    # - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
   security:
