--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -42,9 +42,9 @@ security:
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
   access_control:
-    - { path: ^/api/login, roles: PUBLIC_ACCESS }
-    - { path: ^/api/docs, roles: PUBLIC_ACCESS }
-    - { path: ^/api/media_object, roles: PUBLIC_ACCESS }
+    - { path: ^/api/login, roles: IS_AUTHENTICATED_FULLY }
+    - { path: ^/api/docs, roles: IS_AUTHENTICATED_FULLY }
+    - { path: ^/api/media_object, roles: IS_AUTHENTICATED_FULLY }
     # - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
